Feat/add wallet history routes (#20)
- feat(wallet): add own and external transfer history routes
